fixed feed padding top on mobile

--- a/client/app/components/App/app.scss
+++ b/client/app/components/App/app.scss
@@ -102,6 +102,8 @@ $background: $background-color;
 
 $navbar-height: 60px;
 
+$rules-mobile-height: 56px;
+
 $input-height: 70px;
 $input-font-size: 16px;
 
